<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextNombre"
        android:hint="@string/nombre_completo"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextTitulo"
        android:hint="@string/titulo_profesional"
        android:inputType="text"
        android:autofillHints="jobTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/imageViewFoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/baseline_camera_alt_24"
        android:scaleType="centerInside"
        android:background="@drawable/circle_background"
        android:padding="20dp"
        android:contentDescription="@string/foto_perfil"/>


    <Button
        android:id="@+id/buttonContinuar"
        android:text="@string/continuar"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
